# git-lfs-http-mirror

./: README.md  git_lfs_http_mirror.py  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: deploy-package-to-pypi.yml
